# AndroidPumpkinOS

./: .gitmodules  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  pitapp.c  pitapp.h  window.c
app/src/main/java/com/pit/pit/: ConfirmationDialog.java  ConfirmationListener.java  CustomView.java  MainActivity.java  PitKeys.java  Pumpkin.java  PumpkinLog.java  PumpkinTask.java  PumpkinUpdate.java  ReceiveActivity.java
app/src/main/res/layout/: activity_main.xml  activity_receive.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/raw/: boot  launcher  memopad  minehunt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
